<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="apparel">Apparel</string>
    <string name="beauty">Beauty</string>
    <string name="shoes">Shoes</string>
    <string name="see_all">See All</string>
    <string name="latest">Latest</string>
    <string name="first_tab_layout_text">ONE</string>
    <string name="second_tab_layout_text">TWO</string>
    <string name="third_tab_layout_text">THREE</string>
    <string name="data_usage">Data Usage</string>
    <string name="wifi_on_map">Wifi On Map</string>
    <string name="my_networks">My Networks</string>
    <string name="add_hidden_network">Add Hidden Network</string>
    <string name="settings">Settings</string>
    <string name="jay_frazier_gmail_com">jay.frazier@gmail.com</string>
    <string name="jay_frazier">Jay Frazier</string>
</resources>